--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
         <title>Hello World!</title>
     </head>
     <body>
+
+        <h1>JS for Beginners</h1>
+        <div id="content">
+
+            <p>blah blah blah</p>
+
+        </div>
         
-        <script>
-            alert("Hello World:");
-        </script>
+        <script src="test.js"></script>       
+        
     </body>
 </html>
