--- a/index.html
+++ b/index.html
@@ -2,32 +2,20 @@
 
 <html lang="en">
 
-<head>
-    <meta charset="utf-8" />
-    <title>JS for Begginers</title>
-    <link href="style.css" type="text/css" rel="stylesheet">
-    <script src="test.js"></script>
-</head>
+    <head>
+        <meta charset="utf-8" />
+        <title>JS for Begginers</title>
+        <link href="style.css" type="text/css" rel="stylesheet">
 
-<body>
+    </head>
 
-    <div id="content">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex vitae blanditiis totam ab, voluptas deserunt
-            quaerat non. Quia consectetur maiores expedita iusto consequatur saepe exercitationem sed unde esse, autem
-            cum.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex vitae blanditiis totam ab, voluptas deserunt
-            quaerat non. Quia consectetur maiores expedita iusto consequatur saepe exercitationem sed unde esse, autem
-            cum.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex vitae blanditiis totam ab, voluptas deserunt
-            quaerat non. Quia consectetur maiores expedita iusto consequatur saepe exercitationem sed unde esse, autem
-            cum.</p>
-    </div>
+    <body>
 
-    <a id="show-more">Show more</a>
+       
+        <div id="colour-changer"></div>
 
-    
-
-</body>
+        <script src="test.js"></script>
+    </body>
 
 
 </html>
