--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 
 <html lang="en">
-
     <head>
         <meta charset="utf-8" />
         <title>JS for Begginers</title>
         <link href="style.css" type="text/css" rel="stylesheet">
-
     </head>
-
     <body>
 
-       
-        <div id="colour-changer"></div>
+        <form id="my-form" name="myForm" action="#">
+            <label for="name">Name:</label>
+            <input type="text" name="name"><br/>
+            <label>Hobbies:</label><br/>
+            <input type="checkbox" name="biking" value="biking">Biking<br/>
+            <input type="checkbox" name="skiing" value="skiing">Skiing<br/>
+            <input type="checkbox" name="diving" value="diving">Diving<br/>
+            <label for="colour">Fav colour:</label>
+            <select name="colour">
+                <option>Red</option>
+                <option>Blue</option>
+                <option>Green</option>
+            </select>
+            <input type="submit" name="submit" value="Submit">
+        </form>
 
+        <div id="message" style="color: red;"></div>
+          
         <script src="test.js"></script>
     </body>
 
